fix: Resolve compilation errors and deprecation warnings
Compilation fixes:
- Fix deprecated Locale constructor usage
- Replace deprecated Runtime.exec() with ProcessBuilder
- Fix varargs call warning in DragDropHandler

Technical improvements:
- Use Locale.forLanguageTag() instead of deprecated Locale(String)
- Use ProcessBuilder for better process control and security
- Proper varargs handling with explicit casting

Result: Clean compilation with no errors or warnings,
enabling successful CI/CD pipeline execution.